--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                 <a href="https://www.sanjibanchoudhury.com/">Sanjiban Choudhury</a>            
           </div>
 
-          <div class="is-size-5 publication-authors">
-            <span class="author-block">Cornell University</span>
+          <div class="is-size-5 conference-authors">
+            <span class="author-block">Cornell Universixty</span>
           </div>
 
           <div class="column has-text-centered">
