--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
                 <a href="https://www.sanjibanchoudhury.com/">Sanjiban Choudhury</a>            
           </div>
 
-          <div class="is-size-5 conference-authors">
+          <!-- write Cornell Univerity in red next line -->
+          <div class="is-size-5 publication-authors">
+            <span class="author-block">Cornell University</span>
+          <div class="is-size-5 publication-authors">
             <span class="author-block">Cornell Universixty</span>
           </div>
 
