--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
 
 
-<section class="section">
+<section class="hero is-small">
   <div class="container is-max-desktop">
 
     <div class="columns is-centered has-text-centered">
