Add title to task planner writeup

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           <br>
           <br>
           <p align="left">
-            We compare an interactive approach against using one LLM prompt, 
+            <b> Tree-structured task planner vs single-prompt. </b> We compare an interactive approach against using one LLM prompt, 
             which tends to violate constraints. Given the observation, the 
             LLM with one monolithic prompt directly assigns subtasks to robots, 
             which violates the constraint that it must confirm with the human 
