--- a/index.html
+++ b/index.html
@@ -399,35 +399,46 @@
 </section>
 
 
-
-<section class="hero is-small">
+<section class="section">
   <div class="container is-max-desktop">
+
     <div class="columns is-centered has-text-centered">
       <div class="column" id="Paper">
         <h2 class="title is-3">Paper</h2>
-          <div class="paper-thumbnail">
-              <a href="https://arxiv.org/abs/2402.18796.pdf">
-                  <img class="layered-paper-big" width="100%" src="./resources/preview_mosaic.png" alt="Paper thumbnail"/>
-              </a>
-          </div>
-        <div class="paper-info">
-          <!-- <a href="https://openreview.net/forum?id=rxlokRzNWRq"><h3>ManiCast: Collaborative Manipulation with Cost-Aware Human Forecasting</h3></a>
-          <p>Kushal Kedia, Prithwish Dan, Atiksh Bhardwaj, Sanjiban Choudhury</p> -->
-          <h3 class="title is-4" style="text-align: center;">BibTex</h3>
-          <pre style="overflow-x:hidden; text-wrap:wrap;"><code>@misc{wang2024mosaic,
+    <div class="paper-thumbnail">
+        <a href="https://arxiv.org/abs/2402.18796.pdf">
+            <img class="layered-paper-big" width="100%" src="./resources/preview_mosaic.png" alt="Paper thumbnail"/>
+        </a>
+    </div>
+    <div class="paper-info">
+        <!-- <a href="https://openreview.net/forum?id=rxlokRzNWRq"><h3>ManiCast: Collaborative Manipulation with Cost-Aware Human Forecasting</h3></a>
+        <p>Kushal Kedia, Prithwish Dan, Atiksh Bhardwaj, Sanjiban Choudhury</p> -->
+        <h3 class="title is-4" style="text-align: center;">BibTex</h3>
+<pre style="overflow-x:hidden; text-wrap:wrap;"><code>@misc{wang2024mosaic,
   title={MOSAIC: A Modular System for Assistive and Interactive Cooking}, 
   author={Huaxiaoyue Wang and Kushal Kedia and Juntao Ren and Rahma Abdullah and Atiksh Bhardwaj and Angela Chao and Kelly Y Chen and Nathaniel Chin and Prithwish Dan and Xinyi Fan and Gonzalo Gonzalez-Pumariega and Aditya Kompella and Maximus Adrian Pace and Yash Sharma and Xiangwan Sun and Neha Sunkara and Sanjiban Choudhury},
   year={2024},
   eprint={2402.18796},
   archivePrefix={arXiv},
   primaryClass={cs.RO}
-}
-            </code></pre> 
-        </div>
-      </div>
+}   
+</code></pre> 
     </div>
-  </div>
+    </div>
+  <!-- <div class="container is-max-desktop content">
+    <h2 class="title">BibTeX</h2>
+    <pre><code>@inproceedings{
+    kedia2023manicast,
+    title={ManiCast: Collaborative Manipulation with Cost-Aware Human Forecasting},
+    author={Kushal Kedia and Prithwish Dan and Atiksh Bhardwaj and Sanjiban Choudhury},
+    booktitle={7th Annual Conference on Robot Learning},
+    year={2023},
+    url={https://openreview.net/forum?id=rxlokRzNWRq}
+}</code></pre>
+  </div> -->
+</div>
 </section>
+
 <br>
 
   <!-- <div class="container is-max-desktop content">
