--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <img src="./static/images/skills.png">
           <br>
           <br>
-          <p align="left">
+          <p style="text-align: left;">
             We evaluate MOSAIC on multiple recipes, involving a range of robot skills that interact with the human user and everyday objects.
           </p>
             
@@ -288,18 +288,18 @@
           <br>
           <!-- write three bullet points next using <ul> -->
 
-          <li align="left"> <b>Interactive Task Planner</b>: Communicates with the user via natural language to decide on a recipe, delegate subtasks, 
+          <li style="text-align: left;"> <b>Interactive Task Planner</b>: Communicates with the user via natural language to decide on a recipe, delegate subtasks, 
             and monitors recipe progress. </li>
-          <li align="left"> <b>Human Motion Forecasting</b>: Extracts and 
+          <li style="text-align: left;"> <b>Human Motion Forecasting</b>: Extracts and 
             converts the human's 2D post to 3D coordinates, which it uses to 
             predict future human motion. </li>
-          <li align="left"> <b>Visuomotor Skill</b>: Produces a 3D grasp pose given image and language input, 
+          <li style="text-align: left;"> <b>Visuomotor Skill</b>: Produces a 3D grasp pose given image and language input, 
             then outputs action conditioned on the grasp pose and 
             predicted human motion.
 
           
 
-          <!-- <p align="left">
+          <!-- <p style="text-align: left;">
             The <em>Interactive Task Planner</em> module communicates with the user via natural language to decide on a recipe. 
             It assigns subtasks to each robot accordingly. The <em>Human Motion Forecasting</em> extracts and converts the 
             human's 2D post to 3D coordinates, which it uses to predict future human 
@@ -325,7 +325,7 @@
           <img src="./static/images/tp_approach_pic.png">
           <br>
           <br>
-          <p align="left">
+          <p style="text-align: left;">
             <b> Embedding LLMs within a behavior tree. </b> LLMs can handle users natural language input, but its output can be error-prone and unconstrained. MOSAIC overcomes this challenges by embedding LLMs within a behavior tree. Each tree node partitions the LLM reasoning process, thereby reducing the complexity and potential error rate.
             <br> <br> We compare MOSAIC's approach against using one LLM prompt, which tends to violate constraints. Given the observation, the LLM with one monolithic prompt directly assigns subtasks to robots, which violates the constraint that it must confirm with the human before assigning subtasks. Meanwhile, our approach is able to follow a correct reasoning path and correctly confirm its subtask proposal with the user.
           </p>
@@ -347,7 +347,7 @@
           <img src="./static/images/HMF_video.gif"
           <br>
           <br>
-          <p align="left">
+          <p style="text-align: left;">
             <b>Real-time Forecasting and Planning.</b> 
             Given an RGB-D scene image, a pose detector extracts the human's 2D pose, which is converted to 3D coordinates using the camera's depth map. The motion forecaster predicts future human motion, which is used by the robot to plan actions.
           </p>
@@ -389,7 +389,7 @@
           <!-- <img src="./static/images/vs_approach_pic.png"> -->
           <br>
           <br>
-          <p align="left">
+          <p style="text-align: left;">
             <b>VLMs for perception and RL for action prediction.</b> 
             At train time, we design a simulator that mimics the real environment. Given the goal position, an RL agent is trained to predict actions under a reward function that enforces environment constraints.
 <br> <br> At inference time, taking an image and natural language as input, the visuomotor module uses OWL-ViT to output a bounding box around the object of interest. This bounding box is passed into FastSAM, which segments out the object and back-projects it onto a point cloud to produce a 3D goal pose. This 3D goal pose is used by the trained RL agent to produce the final actions.
