--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-3" >
-            MOSAIC is a modular architecture that enables multiple robots to collaboratively cook with humans
+            MOSAIC combines large pre-trained models for general tasks with task-specific modules for collaborative cooking.
           </h1>
           <br>
           <div class="publication-video">
